[project]
name = "talkingdb-sdk"
version = "1.0.0"
description = "Python SDK for TalkingDB"
authors = [
    {name = "immkg",email = "mayank.g@smarter.codes"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
packages = [{ include = "talkingdb_sdk" }]

[tool.poetry.dependencies]
python = ">=3.12"
tenacity = "^9.1.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
